--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
 
 // OK
   function API_callback(method, result, data) {
-        var str = "{ \"method\": \"" + method + "\", \"result\": \"" + result + "\", \"data\": \"" + data + "\",}";
-        console.log(str);
+        console.log(method);
+        console.log(result);
+        console.log(data);
   }
 
   function OKInitialization() {
