--- a/index.html
+++ b/index.html
@@ -87,9 +87,27 @@
 
 // OK
   function API_callback(method, result, data) {
-        console.log(method);
-        console.log(result);
-        console.log(data);
+    console.log(method);
+    console.log(result);
+    console.log(data);
+
+    if (method === "showAd") {
+      if (data === "no_ads" || data === "call_limit") {
+        unityInstance.SendMessage('AdsManager', 'TryToLoadFullScreen');
+      }
+    } else if (method === "loadAd") {
+      if (data === "ready") {
+        FAPI.UI.showLoadedAd();
+      } else if (data === "empty" || data === "call_limit" || data === "disabled") {
+        unityInstance.SendMessage('AdsManager', 'TryToLoadCustomRewardVideo');
+      }
+    } else if (method === "loadAd") {
+      if (data === "complete") {
+        unityInstance.SendMessage('AdsManager', 'GetReward');
+      } else if (data === "not_prepared" || data === "mp4_not_supported") {
+        unityInstance.SendMessage('AdsManager', 'TryToLoadCustomRewardVideo');
+      }
+    }
   }
 
   function OKInitialization() {
@@ -108,49 +126,14 @@
   }
 
     function ShowOKInterstational() {
-      FAPI.UI.showAd()
-      .then(res => {
-        console.log(res);
-        if (res.data === "no_ads" || res.data === "call_limit") {
-          unityInstance.SendMessage('AdsManager', 'TryToLoadFullScreen');
-        }
-      })
-      .catch(err => {
-        console.log(err);
-        unityInstance.SendMessage('AdsManager', 'TryToLoadFullScreen');
-      })
+      FAPI.UI.showAd();
     }
 
     function ShowOKRewardVideo() {
-      FAPI.UI.loadAd()
-      .then(res => {
-        console.log(res);
-        if (res.data === "ready") {
-          FAPI.UI.showLoadedAd().then(res => {
-            console.log(res);
-            if (res.data === "complete") {
-              unityInstance.SendMessage('AdsManager', 'GetReward');
-            } else if (res.data === "not_prepared" || res.data === "mp4_not_supported") {
-              unityInstance.SendMessage('AdsManager', 'TryToLoadCustomRewardVideo');
-            }
-          })
-        } else if (res.data === "empty" || res.data === "call_limit" || res.data === "disabled") {
-          unityInstance.SendMessage('AdsManager', 'TryToLoadCustomRewardVideo');
-        }
-      })
-      .catch(err => {
-        console.log(err);
-        unityInstance.SendMessage('AdsManager', 'TryToLoadCustomRewardVideo');
-      })
+      FAPI.UI.loadAd();
     }
 
     function OKPublish(text, link) {
-      //var rParams = FAPI.Util.getRequestParameters();
-      //var currentUserId = rParams.vk_user_id;
-      //vkBridge.send('OKWebAppCallAPIMethod', {"method" : "mediatopic.post", "request_id" : currentUserId,
-      //"params": {"uid" : currentUserId, "type" : "USER",
-      //"attachment": {"media" : [{"title" : text, "url" : link}]}}});
-
       FAPI.UI.postMediatopic({"media" : [{"title" : text, "url" : link}]});
     }
 
