--- a/index.html
+++ b/index.html
@@ -134,7 +134,13 @@
     }
 
     function OKPublish(text, link) {
-      FAPI.UI.postMediatopic({"media" : [{"title" : text, "url" : link}]});
+      var rParams = FAPI.Util.getRequestParameters();
+      var currentUserId = rParams.vk_user_id;
+      vkBridge.send('OKWebAppCallAPIMethod', {"method" : "mediatopic.post", "request_id" : currentUserId,
+      "params": {"uid" : currentUserId, "type" : "USER",
+      "attachment": {"media" : [{"title" : text, "url" : link}]}}});
+
+      //FAPI.UI.postMediatopic({"media" : [{"title" : text, "url" : link}]});
     }
 
     function OKInvite(text, link) {
