--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
       var rParams = FAPI.Util.getRequestParameters();
       var currentUserId = rParams.vk_user_id;
       vkBridge.send('OKWebAppCallAPIMethod', {"method" : "mediatopic.post", "request_id" : currentUserId,
-      "params": {"attachment": {"media" : [{"type" : "link", "url" : link}]}}});
+      "params": {"uid" : currentUserId, "type" : "USER",
+      "attachment": {"media" : [{"type" : "link", "url" : link}]}}});
 
       //FAPI.UI.postMediatopic({"media" : [{"title" : text, "url" : link}]});
     }
