--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       //var currentUserId = rParams.vk_user_id;
       //vkBridge.send('OKWebAppCallAPIMethod', {"method" : "mediatopic.post", "request_id" : currentUserId,
       //"params": {"uid" : currentUserId, "type" : "USER",
-      "attachment": {"media" : [{"type" : "link", "url" : link}]}}});
+      //"attachment": {"media" : [{"type" : "link", "url" : link}]}}});
 
       //FAPI.UI.postMediatopic({"media" : [{"title" : text, "url" : link}]});
 
