--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
 
       //FAPI.UI.postMediatopic({"media" : [{"title" : text, "url" : link}]});
 
-      vkBridge.send("VKWebAppShowWallPostBox",  {"media" : [{"type" : "link", "url" : link}]}).catch(err =>{
+      vkBridge.send("VKWebAppShowWallPostBox",  {"media" : [
+        {"type" : "text", "text" : text},
+        {"type" : "link", "url" : link}
+      ]}).catch(err =>{
         console.log(err);
       });
     }
