--- a/index.html
+++ b/index.html
@@ -160,9 +160,8 @@
           }
         ).then(res => {
           console.log(res);
-        ).catch(err => {
+        }).catch(err => {
           console.log(res);
-        )
       })
     }
 
