--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
         ).then(res => {
           console.log(res);
         }).catch(err => {
-          console.log(res);
-      })
+          console.log(res)})
+      }
     }
 
     // VK
