--- a/index.html
+++ b/index.html
@@ -137,16 +137,6 @@
     }
 
     function OKInvite(text, link) {
-      vkBridge.send('VKWebAppShare', {"link": "https://ok.ru/app/vk_app7978603"})
-      .then(res => {
-        console.log(res);
-      })
-      .catch(err => {
-        console.log(err);
-      })
-    }
-
-    function OKInvite2(text, link) {
       vkBridge.send('OKWebAppCallAPIMethod',
         {"method" : "friends.getByDevices", "request_id" : "getByDevices",
         "params": { "devices" : ["IOS", "ANDROID"]}
@@ -161,6 +151,8 @@
           }).catch(err => {
             console.log(err);
           })
+        } else {
+          console.log("no ANDROID or IOS friends");
         }
       }).catch(err => {
         console.log(err);
@@ -227,21 +219,13 @@
     }
 
     function VKInvite() {
-      //try {
-      //  vkBridge.send("VKWebAppShowInviteBox").catch(err => {
-      //    VK.callMethod("showInviteBox");
-      //  })
-      //} catch(err) {
-      //  VK.callMethod("showInviteBox");
-      //}
-
-      vkBridge.send('VKWebAppShare', {"link": "https://ok.ru/app/vk_app7978603"})
-      .then(res => {
-        console.log(res);
-      })
-      .catch(err => {
-        console.log(err);
-      })
+      try {
+        vkBridge.send("VKWebAppShowInviteBox").catch(err => {
+          VK.callMethod("showInviteBox");
+        })
+      } catch(err) {
+        VK.callMethod("showInviteBox");
+      }
     }
 
     function VKMobileInvite() {
