--- a/index.html
+++ b/index.html
@@ -124,16 +124,24 @@
 
       //FAPI.UI.postMediatopic({"media" : [{"title" : text, "url" : link}]});
 
-      vkBridge.send("VKWebAppShowWallPostBox",
-        //{"attachment":
-          {"media" : [
-            {"type" : "text", "text" : text},
-            {"type" : "link", "url" : link}
-          ]}
-        //}
-      ).catch(err =>{
+      //vkBridge.send("VKWebAppShowWallPostBox",
+      //  {"attachment":
+      //    {"media" : [
+      //      {"type" : "text", "text" : text},
+      //      {"type" : "link", "url" : link}
+      //    ]}
+      //  }
+      //).catch(err =>{
+      //  console.log(err);
+      //});
+
+      vkBridge.send("VKWebAppShowWallPostBox", {
+        "message": text,
+        "attachments": link
+      }).catch(err =>{
         console.log(err);
       });
+
     }
 
     function OKInvite(text, link) {
