--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
   }
 
     function ShowOKInterstational() {
-      FAPI.UI.showAd();
+      ShowVKInterstational();
     }
 
     function ShowOKRewardVideo() {
-      FAPI.UI.loadAd();
+      ShowVKRewardVideo();
     }
 
     function OKPublish(text, link) {
