--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
           rewardvideoID = VKrewardvideoID;
         }
       } catch (e) {
+        console.log("vk");
         unityInstance.SendMessage('VKMechanicsController', 'VKInitialization');
         fullscreenID = VKfullscreenID;
         mobilefullscreenID = VKmobilefullscreenID;
