--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
     }
 
     function VKMobilePublish(text, link) {
+      console.log(text + ", " + link);
       vkBridge.send("VKWebAppShowWallPostBox", {
         "message": text,
         "attachments": link
