--- a/index.html
+++ b/index.html
@@ -177,10 +177,12 @@
   }
 
     function ShowOKInterstational() {
+      console.log('ShowOKInterstational');
       unityInstance.SendMessage('AdsManager', 'TryToLoadFullScreen');
     }
 
     function ShowOKRewardVideo() {
+      console.log('ShowOKRewardVideo');
       unityInstance.SendMessage('AdsManager', 'TryToLoadCustomRewardVideo');
     }
 
