--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
     }
 
     function VKMobileInvite() {
+      console.log("VKMobileInvite");
       vkBridge.send("VKWebAppShowInviteBox");
     }
 
