--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         console.log('ShowOKInterstational');
         unityInstance.SendMessage('AdsManager', 'TryToLoadFullScreen');
       } else {
-
+        FAPI.UI.showAd();
       }
     }
 
